--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": "^8.2",
         "doctrine/dbal": "^4.2",
         "laravel/framework": "^11.31",
+        "laravel/reverb": "^1.5",
         "laravel/socialite": "^5.18",
         "laravel/tinker": "^2.9"
     },
