--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,11 @@
         "dev": [
             "Composer\\Config::disableProcessTimeout",
             "npx concurrently -c \"#93c5fd,#c4b5fd,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"npm run dev\" --names='server,queue,vite'"
+        ],
+        "start-project": [
+            "@php artisan vendor:publish --tag=reverb-config",
+            "npm install",
+            "npm run dev"
         ]
     },
     "extra": {
