--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "aws/aws-sdk-php": "^3.343",
         "doctrine/dbal": "^4.2",
         "laravel/framework": "^11.31",
         "laravel/reverb": "^1.5",
