--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/framework": "^11.31",
         "laravel/reverb": "^1.5",
         "laravel/socialite": "^5.18",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "openai-php/laravel": "^0.11.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
